fixed sass file spacing issue cases by recent libsass changes

--- a/static/styles/modules/timeline.sass
+++ b/static/styles/modules/timeline.sass
@@ -1,48 +1,48 @@
 .timeline
-	padding-left:50px;
-	position:relative;
-	margin-top:10px;
-	margin-bottom:40px;
+	padding-left: 50px;
+	position: relative;
+	margin-top: 10px;
+	margin-bottom: 40px;
 
 	.card
-		display:flex;
-		border:none;
-		border-radius:0px;
+		display: flex;
+		border: none;
+		border-radius: 0px;
 		border-top: 1px solid #eceeef;
-		text-decoration:none;
-		color:#2b303b;
+		text-decoration: none;
+		color: 2b303b;
 		.card-header
-			background:#FFF;
-			border:none;
-			padding:0px;
+			background: #FFF;
+			border: none;
+			padding: 0px;
 			width: 50px;
 			min-width: 50px;
 			max-width: 50px;
-			padding-top:30px;
+			padding-top: 30px;
 		.card-block
 			flex: 1 1 auto;
 			padding: 30px 12px 12px 12px;
 			p
 				color: #ADB3BA;
-				margin-top:2px;
-				font-size:0px;
+				margin-top: 2px;
+				font-size: 0px;
 
 				em
-					text-decoration:none;
+					text-decoration: none;
 					color: #747C84;
-					font-style:normal;
-					font-size:0.9rem;
+					font-style: normal;
+					font-size: 0.9rem;
 				span
-					margin:0px 5px;
-					font-size:0.9rem;
+					margin: 0px 5px;
+					font-size: 0.9rem;
 
 			h3
-				display:inline-block;
-				line-height:22px;
-				font-size:18px;
+				display: inline-block;
+				line-height: 22px;
+				font-size: 18px;
 
 	.card:nth-child(2)
-		border-top:0px;
+		border-top: 0px;
 
 .timeline:before
 	position: absolute;
@@ -56,31 +56,31 @@
 	background-color: #DFE2E5;
 
 .group
-	padding-bottom:16px;
+	padding-bottom: 16px;
 
 .group-title
 	font-size: 13px;
 	text-transform: uppercase;
 	color: #ADB3BA;
-	margin-bottom:30px;
-	margin-top:30px;
-	position:relative;
-	line-height:20px;
+	margin-bottom: 30px;
+	margin-top: 30px;
+	position: relative;
+	line-height: 20px;
 			
 .group-title:before
 	content: '\f01f';
-	font-family:"octicons";
-	position:absolute;
-	left:-48px;
-	font-size:20px;
-	background:#FFF;
-	width:24px;
+	font-family: "octicons";
+	position: absolute;
+	left: -48px;
+	font-size: 20px;
+	background: #FFF;
+	width: 24px;
 	vertical-align: middle;
 	text-align: center;
-	color:#ADB3BA;
+	color: #ADB3BA;
 				
 .group:first-child .group-title
-	margin-top:0px;
+	margin-top: 0px;
 				
 .group:last-child
-	padding-bottom:0px;
+	padding-bottom: 0px;
